--- a/Lab1/prepros-6.config
+++ b/Lab1/prepros-6.config
@@ -5,7 +5,10 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "lib"
+      "lib",
+      "css",
+      "lib/Leaflet.markercluster-1.4.1",
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
